// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter should render active type 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 svg {
  cursor: inherit;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: currentColor;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: SourceSansPro,Arial,sans-serif;
  font-weight: bold;
  font-size: 16px;
  height: 48px;
  border: 2px solid #fff;
  background: #fff;
  color: #272422;
}

.c1 .c4 {
  padding: 0 8px;
}

.c1 .Status-sc-80qxcr-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c1:hover {
  box-shadow: 0 3px 4px 0 rgba(0,0,0,0.07),0 3px 3px -2px rgba(0,0,0,0.06),0 1px 8px 0 rgba(0,0,0,0.10);
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: none;
}

.c1 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c3 {
  margin: 0;
  color: #272422;
  font-size: 16px;
  line-height: 24px;
  font-family: SourceSansPro,Arial,sans-serif;
  font-weight: 600;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c3 a,
.c3 a:focus,
.c3 a:hover,
.c3 a:active,
.c3 a:visited {
  color: inherit;
}

.c0 {
  border-style: solid;
  border-color: #cfcbca;
  border-width: 1px;
  border-radius: 4px;
  display: inline-block;
  font-weight: normal;
  background-color: #f4f4f4;
  box-shadow: 0 0;
}

.c0:hover {
  border-color: #cfcbca;
  box-shadow: none;
}

.c2 {
  font-size: 16px;
  color: #272422;
  background: none;
  border: none;
  font-family: inherit;
  padding: 12px 16px;
  text-align: left;
  cursor: default;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 .c4 {
  padding-right: 0;
}

.c6 {
  cursor: pointer;
}

<div
  className="c0"
  type="active"
>
  <button
    className="c1 c2"
    disabled={false}
    onClick={[Function]}
    size="md"
    type="button"
  >
    <p
      className="c3"
      color="grey5"
      fontSize="sm"
    >
      Label
    </p>
    <div
      className="c4 c5 c6"
      height={24}
      onClick={[Function]}
      width={24}
    >
      <svg
        height={32}
        viewBox="0 0 24 24"
        width={32}
      >
        <path
          d="M17.85 16.44a.5.5 0 010 .71l-.7.7a.5.5 0 01-.71 0L12 13.41l-4.44 4.44a.5.5 0 01-.71 0l-.7-.7a.5.5 0 010-.71L10.59 12 6.15 7.56a.5.5 0 010-.71l.7-.7a.5.5 0 01.71 0L12 10.59l4.44-4.44a.5.5 0 01.71 0l.7.7a.5.5 0 010 .71L13.41 12z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Filter should render default type 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: SourceSansPro,Arial,sans-serif;
  font-weight: bold;
  font-size: 16px;
  height: 48px;
  border: 2px solid #fff;
  background: #fff;
  color: #272422;
}

.c1 .Icon-sc-1vrq823-0 {
  padding: 0 8px;
}

.c1 .Status-sc-80qxcr-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c1:hover {
  box-shadow: 0 3px 4px 0 rgba(0,0,0,0.07),0 3px 3px -2px rgba(0,0,0,0.06),0 1px 8px 0 rgba(0,0,0,0.10);
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: none;
}

.c1 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c3 {
  margin: 0;
  color: #272422;
  font-size: 16px;
  line-height: 24px;
  font-family: SourceSansPro,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c3 a,
.c3 a:focus,
.c3 a:hover,
.c3 a:active,
.c3 a:visited {
  color: inherit;
}

.c0 {
  border-style: solid;
  border-color: #918e8c;
  border-width: 1px;
  border-radius: 4px;
  display: inline-block;
  font-weight: normal;
  background-color: transparent;
  box-shadow: 0 0;
}

.c0:hover {
  border-color: #272422;
}

.c2 {
  font-size: 16px;
  color: #272422;
  background: none;
  border: none;
  font-family: inherit;
  padding: 12px 16px;
  text-align: left;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 .Icon-sc-1vrq823-0 {
  padding-right: 0;
}

<div
  className="c0"
  type="default"
>
  <button
    className="c1 c2"
    disabled={false}
    onClick={[Function]}
    size="md"
    type="button"
  >
    <p
      className="c3"
      color="grey5"
      fontSize="sm"
    >
      Label
    </p>
  </button>
</div>
`;

exports[`Filter should render selected type 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: SourceSansPro,Arial,sans-serif;
  font-weight: bold;
  font-size: 16px;
  height: 48px;
  border: 2px solid #fff;
  background: #fff;
  color: #272422;
}

.c1 .Icon-sc-1vrq823-0 {
  padding: 0 8px;
}

.c1 .Status-sc-80qxcr-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c1:hover {
  box-shadow: 0 3px 4px 0 rgba(0,0,0,0.07),0 3px 3px -2px rgba(0,0,0,0.06),0 1px 8px 0 rgba(0,0,0,0.10);
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  box-shadow: none;
}

.c1 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c3 {
  margin: 0;
  color: #272422;
  font-size: 16px;
  line-height: 24px;
  font-family: SourceSansPro,Arial,sans-serif;
  font-weight: 600;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c3 a,
.c3 a:focus,
.c3 a:hover,
.c3 a:active,
.c3 a:visited {
  color: inherit;
}

.c0 {
  border-style: solid;
  border-color: #df0000;
  border-width: 1px;
  border-radius: 4px;
  display: inline-block;
  font-weight: bold;
  background-color: transparent;
  box-shadow: inset 0 0 0 1px #df0000,0 3px 4px 0 rgba(0,0,0,0.07),0 3px 3px -2px rgba(0,0,0,0.06),0 1px 8px 0 rgba(0,0,0,0.10);
}

.c0:hover {
  border-color: #df0000;
}

.c2 {
  font-size: 16px;
  color: #272422;
  background: none;
  border: none;
  font-family: inherit;
  padding: 12px 16px;
  text-align: left;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 .Icon-sc-1vrq823-0 {
  padding-right: 0;
}

<div
  className="c0"
  type="selected"
>
  <button
    className="c1 c2"
    disabled={false}
    onClick={[Function]}
    size="md"
    type="button"
  >
    <p
      className="c3"
      color="grey5"
      fontSize="sm"
    >
      Label
    </p>
  </button>
</div>
`;
